<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyEdicion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EdicionDiaActivity">

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/fecha"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <ImageButton
        android:id="@+id/ibFecha"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="darFecha"
        app:layout_constraintStart_toEndOf="@+id/tvFecha"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etResumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/resumen_dia"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/ibFecha"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/tvValorVida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/valora_dia"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha"
        tools:ignore="RtlCompat" />

    <Spinner
        android:id="@+id/spnValorVida"
        android:layout_width="107dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvValorVida"
        tools:ignore="RtlCompat" />

    <ScrollView
        android:id="@+id/svContenido"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnValorVida">

        <EditText
            android:id="@+id/etContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descripcion_dia"
            android:inputType="textMultiLine" />
    </ScrollView>

    <ImageView
        android:id="@+id/ivImagen"
        android:layout_width="146dp"
        android:layout_height="152dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/svContenido"
        app:layout_constraintStart_toEndOf="@+id/spnValorVida"
        app:layout_constraintTop_toBottomOf="@+id/etResumen"
        app:srcCompat="@android:drawable/sym_def_app_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>